--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "game-fox",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -6,16 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "framer-motion": "^5.6.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
+    "tailwindcss": "^3.0.14",
     "typescript": "4.5.4"
   }
 }
