--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
