--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
     "@heroicons/react": "^1.0.5",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "axios": "^0.24.0",
@@ -17,7 +18,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-player": "^2.9.0"
+    "react-player": "^2.9.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
